[gd_scene load_steps=16 format=3 uid="uid://cptb8iloglfde"]

[ext_resource type="PackedScene" uid="uid://w7m6tehvvy3g" path="res://Characters/player_lvl_1.tscn" id="1_0511s"]
[ext_resource type="Script" path="res://World/lvl_4.gd" id="1_rged2"]
[ext_resource type="PackedScene" uid="uid://bxyc5geuerhbe" path="res://Characters/enemy.tscn" id="2_qxas3"]
[ext_resource type="Script" path="res://World/MovingBackground.gd" id="2_se7v2"]
[ext_resource type="Texture2D" uid="uid://ks6bdpebeg2h" path="res://Assets/Textures/background4.png" id="3_23xpr"]
[ext_resource type="Material" uid="uid://63cgipkhpvem" path="res://World/water.tres" id="4_u4275"]
[ext_resource type="TileSet" uid="uid://bpjprpu1i2yu0" path="res://World/lvl_4.tres" id="5_duct7"]
[ext_resource type="PackedScene" uid="uid://cei4ksh8r3g52" path="res://World/hud.tscn" id="8_eyruw"]
[ext_resource type="AudioStream" uid="uid://cqu7hklt24uhv" path="res://Assets/Sounds/game-sound.wav" id="9_lsv7q"]
[ext_resource type="Theme" uid="uid://q2pxe47w6snq" path="res://MainMenu.tres" id="10_xmbsr"]
[ext_resource type="AudioStream" uid="uid://cdiigcmyv3ix6" path="res://Assets/Sounds/success_sound.wav" id="11_p1rv0"]
[ext_resource type="AudioStream" uid="uid://c4yluin1nompb" path="res://Assets/Sounds/failure_sound.wav" id="12_ofye4"]

[sub_resource type="Environment" id="Environment_0qi0o"]
background_mode = 3
background_color = Color(0.345098, 0.341176, 0.337255, 1)
background_energy_multiplier = 0.0
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.0
glow_enabled = true
glow_levels/1 = 5.0
glow_levels/2 = 5.0
glow_levels/3 = 5.0
glow_levels/4 = 5.0
glow_levels/5 = 5.0
glow_levels/6 = 5.0
glow_levels/7 = 5.0
glow_intensity = 5.0
glow_hdr_threshold = 0.9
glow_hdr_scale = 4.0
glow_hdr_luminance_cap = 36.0

[sub_resource type="LabelSettings" id="LabelSettings_dmqpw"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_6psi7"]
font_size = 40

[node name="lvl4" type="Node2D" groups=["Map"]]
script = ExtResource("1_rged2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0qi0o")

[node name="MovingBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_se7v2")

[node name="ParallaxLayer" type="ParallaxLayer" parent="MovingBackground"]
motion_mirroring = Vector2(1720, 0)

[node name="Background" type="Sprite2D" parent="MovingBackground/ParallaxLayer"]
texture_filter = 1
position = Vector2(440, 391.5)
scale = Vector2(1.34687, 1.10694)
texture = ExtResource("3_23xpr")

[node name="player_Lvl1" parent="." instance=ExtResource("1_0511s")]
texture_filter = 1
position = Vector2(155, 314)

[node name="WorldSpace" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="WorldSpace"]
tile_set = ExtResource("5_duct7")
rendering_quadrant_size = 18
format = 2
layer_0/name = "Background"
layer_1/name = "Foreground"
layer_1/tile_data = PackedInt32Array(1966083, 65536, 1, 2031619, 65536, 6, 2097155, 65536, 6, 2162691, 65536, 6, 2228227, 131072, 1, 2293763, 131072, 6, 2359299, 131072, 6, 2424835, 131072, 6, 2490371, 131072, 6, 2555907, 131072, 6, 1966084, 131072, 1, 2031620, 131072, 6, 2097156, 131072, 6, 2162692, 131072, 6, 2228228, 131072, 1, 2293764, 131072, 6, 2359300, 131072, 6, 2424836, 131072, 6, 2490372, 131072, 6, 2555908, 131072, 6, 1966085, 131072, 1, 2031621, 262144, 5, 2097157, 131072, 6, 2162693, 262144, 5, 2228229, 917505, 1, 2293765, 917505, 3, 2359301, 65536, 1, 2424837, 65536, 6, 2490373, 65536, 6, 2555909, 65536, 6, 1966086, 131072, 1, 2031622, 262144, 5, 2097158, 131072, 6, 2162694, 262144, 5, 2228230, 196608, 1, 2293766, 196608, 6, 2359302, 131072, 1, 2424838, 262144, 5, 2490374, 131072, 6, 2555910, 131072, 6, 1966087, 131072, 1, 2031623, 262144, 5, 2097159, 131072, 6, 2162695, 262144, 5, 2228231, 131072, 6, 2293767, 131072, 6, 2359303, 131072, 1, 2424839, 262144, 5, 2490375, 131072, 6, 2555911, 131072, 6, 1966088, 131072, 1, 2031624, 262144, 5, 2097160, 131072, 6, 2162696, 262144, 5, 2228232, 131072, 6, 2293768, 131072, 6, 2359304, 131072, 1, 2424840, 262144, 5, 2490376, 131072, 6, 2555912, 131072, 6, 1966089, 131072, 1, 2031625, 131072, 6, 2097161, 262144, 5, 2162697, 262144, 5, 2228233, 262144, 5, 2293769, 131072, 6, 2359305, 917505, 1, 2424841, 917505, 2, 2490377, 917505, 2, 2555913, 917505, 3, 1966090, 131072, 1, 2031626, 262144, 5, 2097162, 131072, 6, 2162698, 262144, 5, 2228234, 131072, 6, 2293770, 131072, 6, 2359306, 196608, 1, 2424842, 196608, 6, 2490378, 196608, 6, 2555914, 196608, 6, 1966091, 131072, 1, 2031627, 131072, 6, 2097163, 131072, 6, 2162699, 131072, 6, 2228235, 262144, 5, 2293771, 131072, 6, 2359307, 131072, 6, 2424843, 131072, 6, 2490379, 131072, 6, 2555915, 131072, 6, 1966092, 131072, 1, 2031628, 131072, 6, 2097164, 131072, 6, 2162700, 131072, 6, 2228236, 131072, 6, 2293772, 262144, 5, 2359308, 131072, 6, 2424844, 131072, 6, 2490380, 131072, 6, 2555916, 131072, 6, 1966093, 131072, 1, 2031629, 131072, 6, 2097165, 65536, 1, 2162701, 65536, 6, 2228237, 65536, 6, 2293773, 65536, 6, 2359309, 65536, 6, 2424845, 65536, 6, 2490381, 65536, 6, 2555917, 65536, 6, 1966094, 196608, 1, 2031630, 196608, 6, 2162702, 131072, 6, 2228238, 131072, 6, 2293774, 131072, 6, 2359310, 262144, 5, 2424846, 131072, 6, 2490382, 131072, 6, 2555918, 131072, 6, 2097166, 131072, 1, 2097167, 131072, 1, 2097168, 196608, 1, 2162704, 196608, 6, 2228240, 196608, 6, 2293776, 196608, 6, 2359312, 196608, 6, 2424848, 196608, 6, 2490384, 196608, 6, 2555920, 196608, 6, 2162703, 262144, 5, 2228239, 131072, 6, 2293775, 131072, 6, 2359311, 131072, 6, 2424847, 131072, 6, 2490383, 131072, 6, 2555919, 131072, 6, 2228226, 65536, 1, 2293762, 65536, 6, 2359298, 65536, 6, 2424834, 65536, 6, 2490370, 65536, 6, 2555906, 65536, 6, 2424849, 851968, 2, 2490385, 851968, 3, 2555921, 851968, 1342177283, 2424850, 851968, 2, 2490386, 851968, 1342177283, 2555922, 851968, 3, 2424851, 851968, 2, 2490387, 851968, 3, 2555923, 851968, 3, 2424852, 851968, 2, 2490388, 851968, 3, 2555924, 851968, 3, 2424853, 851968, 2, 2490389, 851968, 1342177283, 2555925, 851968, 3, 2424854, 851968, 2, 2490390, 851968, 3, 2555926, 851968, 3, 2424855, 851968, 2, 2490391, 851968, 1879048195, 2555927, 851968, 3, 2424856, 851968, 2, 2490392, 851968, 3, 2555928, 851968, 1342177283, 2424857, 851968, 2, 2490393, 851968, 3, 2555929, 851968, 3, 2424858, 851968, 2, 2490394, 851968, 3, 2555930, 851968, 3, 2424859, 851968, 2, 2490395, 851968, 3, 2555931, 851968, 3, 2424860, 851968, 2, 2490396, 851968, 3, 2555932, 851968, 3, 2424861, 851968, 2, 2490397, 851968, 3, 2555933, 851968, 3, 2424862, 851968, 2, 2490398, 851968, 3, 2555934, 851968, 3, 2424863, 851968, 2, 2490399, 851968, 3, 2555935, 851968, 1342177283, 2424864, 851968, 2, 2490400, 851968, 3, 2555936, 851968, 3, 2424865, 851968, 2, 2490401, 851968, 3, 2555937, 851968, 3, 2424866, 851968, 2, 2490402, 851968, 3, 2555938, 851968, 3, 2424867, 851968, 2, 2490403, 851968, 1879048195, 2555939, 851968, 3, 2424868, 851968, 2, 2490404, 851968, 3, 2555940, 851968, 3, 2424869, 851968, 2, 2490405, 851968, 3, 2555941, 851968, 3, 2424870, 851968, 2, 2490406, 851968, 3, 2555942, 851968, 1879048195, 2424871, 851968, 2, 2490407, 851968, 3, 2555943, 851968, 3, 2424872, 851968, 2, 2490408, 851968, 3, 2555944, 851968, 3, 2424873, 65536, 6, 2490409, 65536, 6, 2555945, 65536, 6, 2424874, 131072, 6, 2490410, 131072, 6, 2555946, 131072, 6, 2424875, 131072, 6, 2490411, 131072, 6, 2555947, 131072, 6, 2424876, 196608, 6, 2490412, 196608, 6, 2555948, 196608, 6, 2424877, 131072, 6, 2490413, 131072, 6, 2555949, 131072, 6, 2424878, 65536, 6, 2490414, 65536, 6, 2555950, 65536, 6, 2424879, 131072, 6, 2490415, 131072, 6, 2555951, 131072, 6, 2424880, 131072, 6, 2490416, 131072, 6, 2555952, 131072, 6, 2424881, 917505, 2, 2490417, 917505, 2, 2555953, 917505, 3, 2424882, 131072, 6, 2490418, 131072, 6, 2555954, 131072, 6, 2424883, 196608, 6, 2490419, 196608, 6, 2555955, 196608, 6, 2424832, 851968, 2, 2490368, 851968, 3, 2555904, 851968, 3, 2424833, 851968, 2, 2490369, 851968, 3, 2555905, 851968, 3, 2293812, 131072, 6, 2359348, 131072, 6, 2424884, 131072, 6, 2490420, 131072, 6, 2555956, 131072, 6, 2293813, 196608, 6, 2359349, 196608, 6, 2424885, 196608, 6, 2490421, 196608, 6, 2555957, 196608, 6, 2424886, 851968, 2, 2490422, 851968, 3, 2555958, 851968, 3, 2293801, 65536, 1, 2359337, 65536, 6, 2293802, 131072, 1, 2359338, 131072, 6, 2293803, 131072, 1, 2359339, 131072, 6, 1900588, 65536, 1, 1966124, 65536, 6, 2031660, 65536, 6, 2097196, 65536, 6, 2162732, 65536, 6, 2228268, 65536, 6, 2293804, 196608, 1, 2359340, 196608, 6, 1900589, 131072, 1, 1966125, 131072, 6, 2031661, 131072, 6, 2097197, 131072, 6, 2162733, 131072, 6, 2228269, 131072, 6, 2293805, 131072, 6, 2359341, 131072, 6, 1900590, 131072, 1, 1966126, 131072, 6, 2031662, 131072, 6, 2097198, 131072, 6, 2162734, 65536, 1, 2228270, 65536, 6, 2293806, 65536, 6, 2359342, 65536, 6, 1900591, 131072, 1, 1966127, 131072, 6, 2031663, 131072, 6, 2097199, 131072, 6, 2162735, 131072, 1, 2228271, 131072, 6, 2293807, 131072, 6, 2359343, 131072, 6, 1900592, 131072, 1, 1966128, 131072, 6, 2031664, 131072, 6, 2097200, 131072, 6, 2162736, 131072, 1, 2228272, 131072, 6, 2293808, 131072, 6, 2359344, 131072, 6, 1900593, 131072, 1, 1966129, 131072, 6, 2031665, 65536, 1, 2097201, 65536, 6, 2162737, 917505, 1, 2228273, 917505, 2, 2293809, 917505, 2, 2359345, 917505, 2, 1900594, 196608, 1, 1966130, 196608, 6, 2031666, 131072, 1, 2097202, 131072, 6, 2162738, 131072, 1, 2228274, 131072, 6, 2293810, 131072, 6, 2359346, 131072, 6, 2031667, 917505, 1, 2097203, 917505, 3, 2162739, 196608, 1, 2228275, 196608, 6, 2293811, 196608, 6, 2359347, 196608, 6, 2031668, 131072, 1, 2097204, 131072, 6, 2162740, 131072, 6, 2228276, 131072, 6, 2031669, 196608, 1, 2097205, 196608, 6, 2162741, 196608, 6, 2228277, 196608, 6, 2424887, 851968, 2, 2490423, 851968, 3, 2555959, 851968, 3, 2490367, 851968, 2, 2555903, 851968, 3, 2621439, 851968, 3, 2490366, 851968, 2, 2490365, 851968, 2, 2490364, 851968, 2, 2490363, 851968, 2, 2490362, 851968, 2, 2490361, 851968, 2, 2490360, 851968, 2, 2490359, 851968, 2, 2490358, 851968, 2, 2490357, 851968, 2, 2490356, 851968, 2, 2490355, 851968, 2, 2490354, 851968, 2, 2490345, 851968, 2, 2490346, 851968, 2, 2490347, 851968, 2, 2490348, 851968, 2, 2490349, 851968, 2, 2490350, 851968, 2, 2490351, 851968, 2, 2490352, 851968, 2, 2490353, 851968, 2, 2424903, 851968, 2, 2424902, 851968, 2, 2424901, 851968, 2, 2424900, 851968, 2, 2424899, 851968, 2, 2424898, 851968, 2, 2424897, 851968, 2, 2424896, 851968, 2, 2424895, 851968, 2, 2424894, 851968, 2, 2424893, 851968, 2, 2424892, 851968, 2, 2424891, 851968, 2, 2424890, 851968, 2, 2424889, 851968, 2, 2424888, 851968, 2, 2490424, 851968, 3, 2490425, 851968, 3, 2490426, 851968, 3, 2490427, 851968, 3, 2490428, 851968, 3, 2490429, 851968, 3, 2490430, 851968, 3, 2490431, 851968, 3, 2490432, 851968, 3, 2490433, 851968, 3, 2490434, 851968, 3, 2490435, 851968, 3, 2490436, 851968, 3, 2490437, 851968, 3, 2490438, 851968, 3, 2490439, 851968, 3, 2555975, 851968, 3, 2555974, 851968, 3, 2555973, 851968, 3, 2555972, 851968, 3, 2555971, 851968, 3, 2555970, 851968, 3, 2555969, 851968, 3, 2555968, 851968, 3, 2555967, 851968, 3, 2555966, 851968, 3, 2555965, 851968, 3, 2555964, 851968, 3, 2555963, 851968, 3, 2555962, 851968, 3, 2555961, 851968, 3, 2555960, 851968, 3, 2555902, 851968, 3, 2621438, 851968, 3, 2621437, 851968, 3, 2621436, 851968, 3, 2621435, 851968, 3, 2621434, 851968, 3, 2621433, 851968, 3, 2621432, 851968, 3, 2621431, 851968, 3, 2621430, 851968, 3, 2621429, 851968, 3, 2621428, 851968, 3, 2621427, 851968, 3, 2621426, 851968, 3, 2621425, 851968, 3, 2621424, 851968, 3, 2555888, 851968, 3, 2555887, 851968, 3, 2555889, 851968, 3, 2555890, 851968, 3, 2555891, 851968, 3, 2555892, 851968, 3, 2555893, 851968, 3, 2555894, 851968, 3, 2555895, 851968, 3, 2555896, 851968, 3, 2555897, 851968, 3, 2555898, 851968, 3, 2555899, 851968, 3, 2555900, 851968, 3, 2555901, 851968, 3, 2555886, 851968, 3, 2555885, 851968, 3, 2555884, 851968, 3, 2555883, 851968, 3, 2555882, 851968, 3, 2555881, 851968, 3, 2621417, 851968, 3, 2621418, 851968, 3, 2621419, 851968, 3, 2621420, 851968, 3, 2621421, 851968, 3, 2621422, 851968, 3, 2621423, 851968, 3, 2686967, 851968, 3, 2752503, 851968, 3, 2818039, 851968, 3, 2686968, 851968, 3, 2752504, 851968, 3, 2818040, 851968, 3, 2686969, 851968, 3, 2752505, 851968, 3, 2818041, 851968, 3, 2686970, 851968, 3, 2752506, 851968, 3, 2818042, 851968, 3, 2686971, 851968, 3, 2752507, 851968, 3, 2818043, 851968, 3, 2686972, 851968, 3, 2752508, 851968, 3, 2818044, 851968, 3, 2686973, 851968, 3, 2752509, 851968, 3, 2818045, 851968, 3, 2686974, 851968, 3, 2752510, 851968, 3, 2818046, 851968, 3, 2686975, 851968, 3, 2752511, 851968, 3, 2818047, 851968, 3, 2621440, 851968, 3, 2686976, 851968, 3, 2752512, 851968, 3, 2621441, 851968, 3, 2686977, 851968, 3, 2752513, 851968, 3, 2621442, 851968, 3, 2686978, 851968, 3, 2752514, 851968, 3, 2621443, 851968, 3, 2686979, 851968, 3, 2752515, 851968, 3, 2621444, 851968, 3, 2686980, 851968, 3, 2752516, 851968, 3, 2621445, 851968, 3, 2686981, 851968, 3, 2752517, 851968, 3, 2621446, 851968, 3, 2686982, 851968, 3, 2752518, 851968, 3, 2621447, 851968, 3, 2686983, 851968, 3, 2752519, 851968, 3, 2621448, 851968, 3, 2686984, 851968, 3, 2752520, 851968, 3, 2621449, 851968, 3, 2686985, 851968, 3, 2752521, 851968, 3, 2621450, 851968, 3, 2686986, 851968, 3, 2752522, 851968, 3, 2621451, 851968, 3, 2686987, 851968, 3, 2752523, 851968, 3, 2621452, 851968, 3, 2686988, 851968, 3, 2752524, 851968, 3, 2621453, 851968, 3, 2686989, 851968, 3, 2752525, 851968, 3, 2621454, 851968, 3, 2686990, 851968, 3, 2752526, 851968, 3, 2621455, 851968, 3, 2686991, 851968, 3, 2752527, 851968, 3, 2621456, 851968, 3, 2686992, 851968, 3, 2752528, 851968, 3, 2621457, 851968, 3, 2686993, 851968, 3, 2752529, 851968, 3, 2621458, 851968, 3, 2686994, 851968, 3, 2752530, 851968, 3, 2621459, 851968, 3, 2686995, 851968, 3, 2752531, 851968, 3, 2621460, 851968, 3, 2686996, 851968, 3, 2752532, 851968, 3, 2621461, 851968, 3, 2686997, 851968, 3, 2752533, 851968, 3, 2621462, 851968, 3, 2686998, 851968, 3, 2752534, 851968, 3, 2621463, 851968, 3, 2686999, 851968, 3, 2752535, 851968, 3, 2621464, 851968, 3, 2687000, 851968, 3, 2752536, 851968, 3, 2621465, 851968, 3, 2687001, 851968, 3, 2752537, 851968, 3, 2621466, 851968, 3, 2687002, 851968, 3, 2752538, 851968, 3, 2621467, 851968, 3, 2687003, 851968, 3, 2752539, 851968, 3, 2621468, 851968, 3, 2687004, 851968, 3, 2752540, 851968, 3, 2621469, 851968, 3, 2687005, 851968, 3, 2752541, 851968, 3, 2621470, 851968, 3, 2687006, 851968, 3, 2752542, 851968, 3, 2621471, 851968, 3, 2687007, 851968, 3, 2752543, 851968, 3, 2621472, 851968, 3, 2687008, 851968, 3, 2752544, 851968, 3, 2621473, 851968, 3, 2687009, 851968, 3, 2752545, 851968, 3, 2621474, 851968, 3, 2687010, 851968, 3, 2752546, 851968, 3, 2621475, 851968, 3, 2687011, 851968, 3, 2752547, 851968, 3, 2621476, 851968, 3, 2687012, 851968, 3, 2752548, 851968, 3, 2621477, 851968, 3, 2687013, 851968, 3, 2752549, 851968, 3, 2621478, 851968, 3, 2687014, 851968, 3, 2752550, 851968, 3, 2621479, 851968, 3, 2687015, 851968, 3, 2752551, 851968, 3, 2621480, 851968, 3, 2687016, 851968, 3, 2752552, 851968, 3, 2621481, 851968, 3, 2687017, 851968, 3, 2752553, 851968, 3, 2621482, 851968, 3, 2687018, 851968, 3, 2752554, 851968, 3, 2621483, 851968, 3, 2687019, 851968, 3, 2752555, 851968, 3, 2621484, 851968, 3, 2687020, 851968, 3, 2752556, 851968, 3, 2621485, 851968, 3, 2687021, 851968, 3, 2752557, 851968, 3, 2621486, 851968, 3, 2687022, 851968, 3, 2752558, 851968, 3, 2621487, 851968, 3, 2687023, 851968, 3, 2752559, 851968, 3, 2621488, 851968, 3, 2687024, 851968, 3, 2752560, 851968, 3, 2621489, 851968, 3, 2687025, 851968, 3, 2752561, 851968, 3, 2621490, 851968, 3, 2687026, 851968, 3, 2752562, 851968, 3, 2621491, 851968, 3, 2687027, 851968, 3, 2752563, 851968, 3, 2621492, 851968, 3, 2687028, 851968, 3, 2752564, 851968, 3, 2621493, 851968, 3, 2687029, 851968, 3, 2752565, 851968, 3, 2621494, 851968, 3, 2687030, 851968, 3, 2752566, 851968, 3, 2621495, 851968, 3, 2687031, 851968, 3, 2752567, 851968, 3, 2621496, 851968, 3, 2687032, 851968, 3, 2752568, 851968, 3, 2621497, 851968, 3, 2687033, 851968, 3, 2752569, 851968, 3, 2621498, 851968, 3, 2687034, 851968, 3, 2752570, 851968, 3, 2621499, 851968, 3, 2687035, 851968, 3, 2752571, 851968, 3, 2621500, 851968, 3, 2687036, 851968, 3, 2752572, 851968, 3, 2621501, 851968, 3, 2687037, 851968, 3, 2752573, 851968, 3, 2621502, 851968, 3, 2687038, 851968, 3, 2752574, 851968, 3, 2621503, 851968, 3, 2687039, 851968, 3, 2752575, 851968, 3, 2621504, 851968, 3, 2687040, 851968, 3, 2752576, 851968, 3, 2621505, 851968, 3, 2687041, 851968, 3, 2752577, 851968, 3)
layer_2/name = "Platforms"
layer_2/tile_data = PackedInt32Array()

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Water Reflections" type="ColorRect" parent="CanvasLayer"]
material = ExtResource("4_u4275")
offset_left = 304.0
offset_top = 666.0
offset_right = 744.0
offset_bottom = 728.0
color = Color(1, 1, 1, 0)

[node name="Water Reflections2" type="ColorRect" parent="CanvasLayer"]
material = ExtResource("4_u4275")
offset_left = -136.0
offset_top = 666.0
offset_right = 40.0
offset_bottom = 728.0
color = Color(1, 1, 1, 0)

[node name="Water Reflections3" type="ColorRect" parent="CanvasLayer"]
material = ExtResource("4_u4275")
offset_left = 968.0
offset_top = 666.0
offset_right = 1160.0
offset_bottom = 728.0
color = Color(1, 1, 1, 0)

[node name="enemy" parent="." instance=ExtResource("2_qxas3")]
position = Vector2(808, 496)

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(155, 315)

[node name="ScoreTimer" type="Timer" parent="."]
one_shot = true

[node name="hud" parent="." instance=ExtResource("8_eyruw")]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_lsv7q")
autoplay = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 8.0
offset_top = 252.0
offset_right = 994.0
offset_bottom = 303.0
theme = ExtResource("10_xmbsr")
alignment = 1

[node name="Option1" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(450, 10)
layout_mode = 2
theme = ExtResource("10_xmbsr")

[node name="Option2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(450, 10)
layout_mode = 2
theme = ExtResource("10_xmbsr")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
offset_top = 313.0
offset_right = 1000.0
offset_bottom = 367.0
alignment = 1

[node name="Option3" type="Button" parent="HBoxContainer2"]
custom_minimum_size = Vector2(450, 10)
layout_mode = 2
theme = ExtResource("10_xmbsr")

[node name="correctPopup" type="Popup" parent="."]
size = Vector2i(350, 150)
theme = ExtResource("10_xmbsr")

[node name="correct" type="Label" parent="correctPopup"]
custom_minimum_size = Vector2(350, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -7.0
offset_right = 20.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_xmbsr")
text = "Correct Answer!"
label_settings = SubResource("LabelSettings_dmqpw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Success_Sound" type="AudioStreamPlayer" parent="correctPopup"]
stream = ExtResource("11_p1rv0")

[node name="wrongPopup" type="Popup" parent="."]
size = Vector2i(350, 150)
theme = ExtResource("10_xmbsr")

[node name="wrong" type="Label" parent="wrongPopup"]
custom_minimum_size = Vector2(350, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -7.0
offset_right = 37.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_xmbsr")
text = "Wrong Answer!!"
label_settings = SubResource("LabelSettings_6psi7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Failure_Sound" type="AudioStreamPlayer" parent="wrongPopup"]
stream = ExtResource("12_ofye4")

[node name="popupTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_lsv7q")
autoplay = true

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="HTTPRequest3" type="HTTPRequest" parent="."]

[node name="HTTPRequest4" type="HTTPRequest" parent="."]

[connection signal="projectile_finished" from="." to="." method="_on_projectile_finished"]
[connection signal="ready" from="." to="." method="_ready"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="timeout" from="popupTimer" to="." method="_on_PopupTimer_timeout"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_get_request_completed"]
[connection signal="request_completed" from="HTTPRequest3" to="." method="_on_delete_request_completed"]
[connection signal="request_completed" from="HTTPRequest4" to="." method="_on_POST_request_completed"]
